Delete jps-plugin dependency, move compilation outside.